@@ -5,6 +5,7 @@ Cacti CHANGELOG
 -bug#0001091: Poller Incorrectly Identifies Unique Hosts
 -bug#0001094: Filtering Broken in Data Sources
 -bug#0001103: Looping poller recache events
+-bug#0001115: View Poller Cache does not show Data Sources that have no host
 -bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
 -feature: Add additional logging to Graph Xport
 -feature: Add rows dropdown to deivces, graphs and data sources
